--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+<link rel="stylesheet" type="text/css" href="https://ben19961.github.io/ResponsiveWebpage/style.css">
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Mobile</title>
-    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <nav>
